# ToolDevTool

./: BuildProject.bat  CMakeLists.txt  GenerateProject.bat
CLIProject/: CMakeLists.txt
CLIProject/src/: main.cpp
CommonCode/: CMakeLists.txt
CommonCode/src/: OBJParser.cpp  OBJParser.h
GUIProject/: CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h
